# kinode

./: .gitignore  Cargo.toml  README.md  apps_home.wasm  blockchain.json  blockchain.wasm  build-app.sh  build.rs  file_transfer.wasm  hi_lus_lus.wasm  http_bindings.wasm  http_proxy.wasm  http_server.wasm  poast.wasm  process_manager.wasm  rr.md  sequencer.wasm  target.wasm  terminal.wasm
.github/workflows/: main.yml
apps-home/: Cargo.toml
apps-home/src/: home.html  lib.rs
apps_home/: Cargo.toml
apps_home/src/: home.html
blockchain/: Cargo.toml
blockchain/src/: lib.rs
boot_sequence/: Cargo.toml  README.md
boot_sequence/src/: apps_home.wasm  file_transfer.wasm  http_bindings.wasm  http_proxy.wasm  main.rs  process_manager.wasm  sequencer.wasm  terminal.wasm  types.rs
contracts/trivial/: trivial.wat
file-transfer/: Cargo.toml
file-transfer-one-off/: Cargo.toml
file-transfer-one-off/src/: lib.rs
file-transfer/src/: file-transfer.html  lib.rs
file_transfer/: Cargo.toml
file_transfer_one_off/: Cargo.toml
hi-lus-lus/: Cargo.toml
hi-lus-lus/src/: lib.rs
hi_lus_lus/src/: lib.rs
http-bindings/: Cargo.toml
http-bindings/src/: lib.rs  process_lib.rs
http-proxy/: Cargo.toml
http-proxy/src/: http-proxy.html  lib.rs
http-server/: Cargo.toml
http-server/src/: lib.rs
modules/apps_home/: Cargo.toml
modules/apps_home/src/: home.html  lib.rs
modules/chess/: Cargo.toml
modules/chess/src/: index.css  index.js  lib.rs
modules/chess/src/llm_types/: mod.rs
modules/eth_demo/: Cargo.toml
modules/eth_demo/src/: TestERC20.json  lib.rs
modules/explorer/: Cargo.toml
modules/explorer/src/: lib.rs  upload.html
modules/file_transfer/: ft_types.rs
modules/file_transfer/ft_client/: Cargo.toml
modules/file_transfer/ft_client/src/: lib.rs
modules/file_transfer/ft_client_worker/: Cargo.toml
modules/file_transfer/ft_client_worker/src/: lib.rs
modules/file_transfer/ft_server/: Cargo.toml
modules/file_transfer/ft_server/src/: lib.rs
modules/file_transfer/ft_server_worker/: Cargo.toml
modules/file_transfer/ft_server_worker/src/: ft_types.rs  lib.rs
modules/file_transfer/src/: file-transfer.html  lib.rs
modules/file_transfer_one_off/src/: lib.rs
modules/hi_lus_lus/: Cargo.toml  wit
modules/hi_lus_lus/src/: lib.rs
modules/http_bindings/: Cargo.toml
modules/http_bindings/src/: lib.rs  login.html
modules/http_proxy/: Cargo.toml
modules/http_proxy/src/: http-proxy.html  lib.rs
modules/key_value/: Cargo.toml
modules/key_value/src/: lib.rs
modules/net_tester/: Cargo.toml
modules/net_tester/src/: lib.rs
modules/orgs/src/: lib.rs  orgs.html
modules/persist/: Cargo.toml
modules/persist/src/: lib.rs  process_lib.rs
modules/poast/src/: lib.rs
modules/pqi_indexer/: Cargo.toml
modules/pqi_indexer/src/: lib.rs
modules/process_manager/: Cargo.toml
modules/process_manager/src/: lib.rs
modules/qns_indexer/: Cargo.toml
modules/qns_indexer/src/: lib.rs
modules/rpc/src/: lib.rs
modules/sequencer/: Cargo.toml  wit
modules/sequencer/src/: lib.rs  process_lib.rs
modules/sequentialize/: Cargo.toml
modules/sequentialize/src/: lib.rs
modules/terminal/: Cargo.toml
modules/terminal/echo/src/: lib.rs
modules/terminal/src/: lib.rs
poast/: Cargo.toml
poast/src/: lib.rs
process-manager/: Cargo.toml
process-manager/src/: component_lib.rs  lib.rs
process_manager/: Cargo.toml
process_manager/src/: lib.rs
sequencer/: Cargo.toml
sequencer/src/: lib.rs
sequencer/wit/: process.wit
src/: blockchain.rs  component_lib.rs  encryptor.rs  engine.rs  eth_rpc.rs  filesystem.rs  fs.rs  http_client.rs  http_server.rs  kernel.rs  kernel_types.rs  keygen.rs  lfs.rs  login.html  main.rs  microkernel.rs  process_lib.rs  register.html  register.rs  terminal.rs  types.rs  vfs.rs  websockets.rs
src/filesystem/: manifest.rs  mod.rs
src/http_server/: mod.rs  server_fns.rs
src/kernel/: mod.rs  mod.rs_anyhow_error  mod.rs_fs_error  utils.rs
src/lfs/: manifest.rs  mod.rs  wal.rs
src/login_app/: asset-manifest.json  index.html
src/net/: connections.rs  connections_old.rs  mod.rs  mod_old.rs  types.rs
src/net/wip/: mod_wip.rs  types.rs
src/pill/: mod.rs
src/register_app/: asset-manifest.json  index.html
src/register_app/static/js/: main.22ceefd9.js  main.22ceefd9.js.map  main.64def144.js  main.64def144.js.map  main.9deda6bc.js  main.9deda6bc.js.map  main.b66b2758.js  main.b66b2758.js.map  main.df808924.js  main.df808924.js.map  main.f357c0b6.js  main.f357c0b6.js.map
src/ws/: connections.rs  listener.rs  mod.rs  sender.rs
terminal/: Cargo.toml
terminal/src/: lib.rs
wit/: process.wit  uqbar.wit
