[package]
name = "uqbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = "*"
async-trait = "0.1.71"
futures = { version = "0.3", default-features = false }
log = "*"
rs_merkle = { version = "1.4", default-features = false }
rustyline-async = "*"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-tungstenite = "*"
tokio-stream = "0.1.14"
url = "*"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
