[package]
name = "uqbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = "*"
async-trait = "0.1.71"
bytes = "1.4.0"
crossterm = { version = "0.26.1", features = ["event-stream"] }
digest = "0.10"
futures = "0.3"
http = "0.2.9"
lazy_static = "1.4.0"
log = "*"
rs_merkle = { version = "1.4", default-features = false }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.28", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "*"
tokio-stream = "0.1.14"
url = "*"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
cita_trie = "4.0.0"
ethers = "2.0"
hasher = "*"
bincode = "*"
rand = "0.8.4"
ring = "0.16.20"
hex = "0.4.3"
aes-gcm-siv = "0.11.1"
elliptic-curve = { version = "0.13.5", features = ["ecdh"] }
thiserror = "1.0.43"
reqwest = "0.11.18"
# For use with https://github.com/tokio-rs/console
# console-subscriber ="*"
