[package]
name = "uqbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
aes-gcm-siv = "0.11.1"
anyhow = "1.0.71"
# async-std = "*"
async-trait = "0.1.71"
bincode = "1.3.3"
bytes = "1.4.0"
cita_trie = "4.0.0"
crossterm = { version = "0.26.1", features = ["event-stream", "bracketed-paste"] }
digest = "0.10"
elliptic-curve = { version = "0.13.5", features = ["ecdh"] }
ethers = "2.0"
futures = "0.3"
hasher = "*"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.4.0"
# local-ip-address = "0.5.4"
log = "*"
# message-io = "0.17"
open = "5.0.0"
public-ip = "0.2.2"
rand = "0.8.4"
reqwest = "0.11.18"
ring = "0.16.20"
# rs_merkle = { version = "1.4", default-features = false }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "1.0.43"
tokio = { version = "1.28", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "*"
# tokio-stream = "0.1.14"
url = "*"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.5"
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
# For use with https://github.com/tokio-rs/console
# console-subscriber ="*"
