[package]
name = "boot_sequence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["fs", "macros", "rt-multi-thread", "sync"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
thiserror = "1.0.43"
ring = "0.16.20"
bincode = "1.3.3"
