[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cita_trie = "4.0.0"
hasher = "*"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
wit-bindgen = { version = "0.8.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:microkernel-process"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
